Make styles more transferable across all recipes

--- a/recipes/kaya-toast.html
+++ b/recipes/kaya-toast.html
@@ -7,28 +7,39 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Kaya Toast</h1>
-
-    <img src="../images/kaya-toast.jpg" alt="Kaya toast on a plate">
-
-    <h3>Description</h3>
-    <p>It is the first thing a Malaysian seeks if they are not a cigarette smoker. It is of course the king of breakfast, the kaya toast. Best served at mamak with teh tarik or kopi o in the morning, it will definitely make your sluggish morning a teeny bit better!</p>
-
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Bread</li>
-        <li>Butter</li>
-        <li>and of course, Kaya</li>
-    </ul>
-
-    <h3>Steps</h3>
-    <ol>
-        <li>Toast your bread and cut out the crust. You can keep the crust if you like. Cut the bread into two pieces and spread a nice layer of kaya jam on top of the bread.</li>
-        <li>Cut a thin piece of cold butter and put on top of the toast. Make sure the butter is cold so it's easier to cut.</li>
-        <li>The other half of the bread ready to go on top.</li>
-        <li>Enjoy!</li>
-    </ol>
-
-    <p><em>This recipe is taken from <a href="https://rasamalaysia.com/kaya-toast/" target="_blank" rel="noopenner noreferrer">rasamalaysia.com</a></em></p>
+    <div class="upper-section">
+        <div class="title" id="roti-bakar-title">
+            Kaya Toast
+            <img class="title-icon" src="../icons/kaya-toast.png" alt="oasts that are spread with kaya and butter on a plate">
+        </div>
+    </div>
+    <div class="lower-section">
+        <div>
+            <h3 class="roti-bakar-headers">Description</h3>
+            <p>It is the first thing a Malaysian seeks if they are not a cigarette smoker. It is of course the king of breakfast, the kaya toast. Best served at mamak with teh tarik or kopi o in the morning, it will definitely make your sluggish morning a teeny bit better!</p>
+        </div>
+        <div class="ingre-and-steps">
+            <div>
+                <h3 class="roti-bakar-headers">Ingredients</h3>
+                <ul>
+                    <li>Bread</li>
+                    <li>Butter</li>
+                    <li>and of course, Kaya</li>
+                </ul>
+            </div>
+            <div class="steps">
+                <h3 class="roti-bakar-headers">Steps</h3>
+                <ol>
+                    <li>Toast your bread and cut out the crust. You can keep the crust if you like. Cut the bread into two pieces and spread a nice layer of kaya jam on top of the bread.</li>
+                    <li>Cut a thin piece of cold butter and put on top of the toast. Make sure the butter is cold so it's easier to cut.</li>
+                    <li>The other half of the bread ready to go on top.</li>
+                    <li>Enjoy!</li>
+                </ol>
+            </div>
+        </div>
+    </div>
+    <div class="footer" id="roti-bakar-footer">
+        This recipe is taken from <a id="roti-bakar-source" href="https://rasamalaysia.com/kaya-toast/" target="_blank" rel="noopenner noreferrer">rasamalaysia.com</a>
+    </div>
 </body>
 </html>
