--- a/recipes/nasi-lemak.html
+++ b/recipes/nasi-lemak.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="upper-section">
-        <div class="title" id="nasi-lemak-title">
+        <div class="title nasi-lemak">
             Nasi Lemak
-            <img class="title-icon" src="../icons/nasi-lemak.png" alt="An illustration of a plate of coconut rice with anchovies, peanuts and chilli paste.">
+            <img class="title-icon nasi-lemak" src="../icons/nasi-lemak.png" alt="An illustration of a plate of coconut rice with anchovies, peanuts and chilli paste.">
         </div>
     </div>
     <div class="lower-section">
@@ -71,8 +71,8 @@
             </div>
         </div>
     </div>
-    <div class="footer">
-        This recipe is taken from <a id="nasi-lemak-source" href="https://rasamalaysia.com/nasi-lemak-recipe/" target="_blank" rel="noopenner noreferrer">rasamalaysia.com</a>
+    <div class="footer nasi-lemak">
+        This recipe is taken from <a class="nasi-lemak" href="https://rasamalaysia.com/nasi-lemak-recipe/" target="_blank" rel="noopenner noreferrer">rasamalaysia.com</a>
     </div>
 </body>
 </html>
