Add the styles for kaya-toast

--- a/recipes/nasi-lemak.html
+++ b/recipes/nasi-lemak.html
@@ -15,13 +15,13 @@
     </div>
     <div class="lower-section">
         <div>
-            <h3 class="nasi-lemak-headers">Description</h3>
+            <h3 class="headers nasi-lemak-headers">Description</h3>
             <p>Nasi Lemak is Malaysia's national dish. Usually eaten during breakfast or dinner (or lunch or late night ...), Nasi Lemak in its most basic form is coconut rice paired with <em>sambal</em> (chilli paste), peanuts and anchovies. Slices of cucumber are also included on the side, along with half of boiled egg.</p>
             <p>Nasi Lemak is also commonly eaten with protein such as chicken (usually fried), more eggs, squids, or cow's lungs (boiled or fried).</p>
         </div>
         <div class="ingre-and-steps">
             <div>
-                <h3 class="nasi-lemak-headers">Ingredients</h3>
+                <h3 class="headers nasi-lemak-headers">Ingredients</h3>
 
                 <h4>Coconut Milk Steamed Rice:</h4>
                 <ul>
@@ -58,7 +58,7 @@
                 </ul>
             </div>
             <div class="steps">
-                <h3 class="nasi-lemak-headers">Steps</h3>
+                <h3 class="headers nasi-lemak-headers">Steps</h3>
                 <ol>
                     <li>Fry the anchovies until they turn light brown</li>
                     <li>To cook the rice, wash and drain as per usual. In addition to the water, add in coconut milk and salt before cooking. Lastly, add in pandan leaves before leaving it to cook.</li>
