--- a/recipes/kaya-toast.html
+++ b/recipes/kaya-toast.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <div class="upper-section">
-        <div class="title" id="roti-bakar-title">
+        <div class="title kaya-toast">
             Kaya Toast
-            <img class="title-icon" src="../icons/kaya-toast.png" alt="oasts that are spread with kaya and butter on a plate">
+            <img class= "title-icon kaya-toast" src="../icons/kaya-toast.png" alt="oasts that are spread with kaya and butter on a plate">
         </div>
     </div>
     <div class="lower-section">
         <div>
-            <h3 class="roti-bakar-headers">Description</h3>
+            <h3 class="headers kaya-toast-headers">Description</h3>
             <p>It is the first thing a Malaysian seeks if they are not a cigarette smoker. It is of course the king of breakfast, the kaya toast. Best served at mamak with teh tarik or kopi o in the morning, it will definitely make your sluggish morning a teeny bit better!</p>
         </div>
         <div class="ingre-and-steps">
             <div>
-                <h3 class="roti-bakar-headers">Ingredients</h3>
+                <h3 class="headers kaya-toast-headers">Ingredients</h3>
                 <ul>
                     <li>Bread</li>
                     <li>Butter</li>
@@ -28,7 +28,7 @@
                 </ul>
             </div>
             <div class="steps">
-                <h3 class="roti-bakar-headers">Steps</h3>
+                <h3 class="headers kaya-toast-headers">Steps</h3>
                 <ol>
                     <li>Toast your bread and cut out the crust. You can keep the crust if you like. Cut the bread into two pieces and spread a nice layer of kaya jam on top of the bread.</li>
                     <li>Cut a thin piece of cold butter and put on top of the toast. Make sure the butter is cold so it's easier to cut.</li>
@@ -38,8 +38,8 @@
             </div>
         </div>
     </div>
-    <div class="footer" id="roti-bakar-footer">
-        This recipe is taken from <a id="roti-bakar-source" href="https://rasamalaysia.com/kaya-toast/" target="_blank" rel="noopenner noreferrer">rasamalaysia.com</a>
+    <div class="footer kaya-toast">
+        This recipe is taken from <a class="kaya-toast" href="https://rasamalaysia.com/kaya-toast/" target="_blank" rel="noopenner noreferrer">rasamalaysia.com</a>
     </div>
 </body>
 </html>
