Add the styles for satay

--- a/recipes/kaya-toast.html
+++ b/recipes/kaya-toast.html
@@ -10,7 +10,7 @@
     <div class="upper-section">
         <div class="title kaya-toast">
             Kaya Toast
-            <img class= "title-icon kaya-toast" src="../icons/kaya-toast.png" alt="oasts that are spread with kaya and butter on a plate">
+            <img class= "title-icon kaya-toast" src="../icons/kaya-toast.png" alt="This that are spread with kaya and butter on a plate">
         </div>
     </div>
     <div class="lower-section">
